--- a/.github/workflows/test_minimal.yml
+++ b/.github/workflows/test_minimal.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  check-environment:
+  run-pytests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -24,10 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-    
+
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run pytests in the base directory
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          ls -lah
+          echo Starting
+          pytest
