--- a/.github/workflows/test_minimal.yml
+++ b/.github/workflows/test_minimal.yml
@@ -25,11 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: GitHub Action for pytest
+      - name: Run pytest
         uses: cclauss/GitHub-Action-for-pytest@0.5.0
 
       # Runs a set of commands using the runners shell
-      - name: Run pytests in the base directory
-        run: |
-          echo Starting
-          pytest
+      #- name: Run pytests in the base directory
+        #run: |
+          #echo Starting
+          #pytest
