--- a/.github/workflows/test_minimal.yml
+++ b/.github/workflows/test_minimal.yml
@@ -25,9 +25,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Run pytest
+      - name: Install pytest
         uses: cclauss/GitHub-Action-for-pytest@0.5.0
 
+      - name: Run pytest
+        run: |
+          pytest
       # Runs a set of commands using the runners shell
       #- name: Run pytests in the base directory
         #run: |
